2016-11-29  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (std::istringstream): Import.
	(GdbServer::rspQuery): Report support for qXfer:exec-file:read.
	(GdbServer::rspCommand): Handle "program".
	(GdbServer::rspCmdProgram)
	(GdbServer::rspMakeTransferExecFileReply): New methods.
	(GdbServer::rspTransfer): Handle "exec-file".
	(GdbServer::getProcessFilename): New method.
	(GdbServer::rspMakeOsDataProcessesReply): List the process's
	program name.
	* src/GdbServer.h (GdbServer::PidElfFilenameMap): New typedef.
	(GdbServer::mPidElfFilenameMap, GdbServer::qXferExecFileReply):
	New fields.
	(GdbServer::getProcessFilename, GdbServer::rspCmdProgram): New
	declarations.
	* src/Utils.cpp (Utils::trim): New static method.
	* src/Utils.h (Utils::trim): Declare.

2016-11-29  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::rspQuery) Report support for
	qXfer:features:read.
	(GdbServer::rspMakeTransferFeaturesReply): New method.
	(GdbServer::rspTransfer): Handle "features"
	* src/GdbServer.h (GdbServer::rspMakeTransferFeaturesReply):
	Declare.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/TargetControlHardware.cpp
	(TargetControlHardware::readMem32)
	(TargetControlHardware::readMem16)
	(TargetControlHardware::readMem8): Check result of readMem before
	accessing the read-in data.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/TargetControlHardware.cpp
	(TargetControlHardware::initPlatform): Remove unused 'err' local.
	(TargetControlHardware::writeTo, TargetControlHardware::readFrom):
	Remove unused 'coreid' locals.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/TargetControlHardware.cpp
	(TargetControlHardware::isExternalMem)
	(TargetControlHardware::readFrom): Cast mEmem.ephy_base to
	uint32_t.

2016-11-28  Pedro Alves  <pedro@palves.net>

	* src/GdbServer.cpp (GdbServer::hideBreakpoints)
	(GdbServer::unhideBreakpoints): Change return type to void.
	* src/GdbServer.h (GdbServer::hideBreakpoints)