@@ -936,19 +936,19 @@ Thread::regAddr (unsigned int  regnum) const
     TargetControl::R0 + 188,
     TargetControl::R0 + 192,
     TargetControl::R0 + 196,
-    TargetControl::R0 + 100,
-    TargetControl::R0 + 104,
-    TargetControl::R0 + 108,
-    TargetControl::R0 + 112,
-    TargetControl::R0 + 116,
-    TargetControl::R0 + 120,
-    TargetControl::R0 + 124,
-    TargetControl::R0 + 128,
-    TargetControl::R0 + 132,
-    TargetControl::R0 + 136,
-    TargetControl::R0 + 140,
-    TargetControl::R0 + 144,
-    TargetControl::R0 + 148,
+    TargetControl::R0 + 200,
+    TargetControl::R0 + 204,
+    TargetControl::R0 + 208,
+    TargetControl::R0 + 212,
+    TargetControl::R0 + 216,
+    TargetControl::R0 + 220,
+    TargetControl::R0 + 224,
+    TargetControl::R0 + 228,
+    TargetControl::R0 + 232,
+    TargetControl::R0 + 236,
+    TargetControl::R0 + 240,
+    TargetControl::R0 + 244,
+    TargetControl::R0 + 248,
     TargetControl::R63,
     TargetControl::CONFIG,
     TargetControl::STATUS,
